--- a/Projeto_Aula04.ipynb
+++ b/Projeto_Aula04.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMj900aBn83d+3lHnuVl5V9",
+      "authorship_tag": "ABX9TyM/XGLrVAT7ihIhHyjtgJ+J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,8 +40,9 @@
       "source": [
         "# Import the Python SDK\n",
         "import google.generativeai as genai\n",
-        "GOOGLE_API_KEY='AIzaSyAmJ8E357RnXLhDIuy4uufqLxpc2Sarm4s'\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)\n",
+        "from google.colab import userdata\n",
+        "api_key = userdata.get( 'SECRET_KEY')\n",
+        "genai.configure(api_key=api_key)\n",
         "\n",
         "# configurando variaveis\n",
         "generation_config = {\n",
@@ -72,86 +73,18 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "base_uri": "https://localhost:8080/"
         },
         "id": "jewmwOyXb6tO",
-        "outputId": "09498234-3826-4d2d-b1b8-26862d0b7cfc"
+        "outputId": "0b55d4d9-e922-45e2-eb71-3ae7a440e90b"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "esperando prompt :o que esta acontecendo no rio grande do sul\n",
-            "Resposta :  **Eventos Recentes no Rio Grande do Sul**\n",
-            "\n",
-            "**1. Chuvas Intensas e Inundações**\n",
-            "\n",
-            "* Fortes chuvas atingiram o estado desde o início de fevereiro de 2023, causando inundações generalizadas.\n",
-            "* Várias cidades foram afetadas, incluindo Porto Alegre, Caxias do Sul e Pelotas.\n",
-            "* Casas, empresas e infraestrutura foram danificadas ou destruídas.\n",
-            "* Milhares de pessoas foram desalojadas e desabrigadas.\n",
-            "\n",
-            "**2. Atuação do Governo**\n",
-            "\n",
-            "* O governo estadual declarou estado de calamidade pública em 11 municípios.\n",
-            "* Equipes de resgate e ajuda humanitária estão sendo enviadas para as áreas afetadas.\n",
-            "* Abrigos e assistência financeira estão sendo fornecidos aos desalojados.\n",
-            "\n",
-            "**3. Impactos Econômicos**\n",
-            "\n",
-            "* As inundações causaram danos significativos à agricultura, indústria e comércio.\n",
-            "* Rodovias e pontes foram fechadas, interrompendo o transporte e a logística.\n",
-            "* Estima-se que os prejuízos econômicos cheguem a bilhões de reais.\n",
-            "\n",
-            "**4. Previsão do Tempo**\n",
-            "\n",
-            "* A previsão do tempo indica que as chuvas devem continuar nos próximos dias.\n",
-            "* Novas inundações e deslizamentos de terra são possíveis.\n",
-            "* A população é aconselhada a ficar atenta aos alertas meteorológicos e tomar medidas de precaução.\n",
-            "\n",
-            "**5. Situação Atual**\n",
-            "\n",
-            "* As equipes de resgate continuam trabalhando para resgatar pessoas e fornecer assistência.\n",
-            "* Os desalojados estão sendo acomodados em abrigos e recebem alimentos, água e roupas.\n",
-            "* O governo e as organizações humanitárias estão trabalhando para restaurar os serviços essenciais e reconstruir as áreas afetadas. /n\n",
-            "esperando prompt: quais sao os endereços dos abrigos para a população que teve que deixar suas casas?\n",
-            "Resposta :  **Endereços dos Abrigos para Desalojados no Rio Grande do Sul**\n",
-            "\n",
-            "**Porto Alegre**\n",
-            "\n",
-            "* Ginásio Tesourinha: Rua Voluntários da Pátria, 400 - Centro Histórico\n",
-            "* Escola Estadual de Ensino Médio Tiradentes: Avenida Loureiro da Silva, 255 - Bom Fim\n",
-            "* Escola Municipal de Ensino Fundamental São Pedro: Rua São Pedro, 850 - São Geraldo\n",
-            "\n",
-            "**Caxias do Sul**\n",
-            "\n",
-            "* Ginásio Municipal de Esportes: Rua Vereador Mário Pezzi, 455 - Centro\n",
-            "* Escola Municipal de Ensino Fundamental Duque de Caxias: Rua Duque de Caxias, 2222 - Pio X\n",
-            "\n",
-            "**Pelotas**\n",
-            "\n",
-            "* Ginásio Municipal de Esportes: Rua Lobo da Costa, 455 - Centro\n",
-            "* Escola Estadual de Ensino Médio Pio XII: Rua Almirante Barroso, 555 - Centro\n",
-            "\n",
-            "**Outros Municípios**\n",
-            "\n",
-            "* **Bagé:** Ginásio Municipal de Esportes Milton de Souza Gomes (Rua General Osório, 1000)\n",
-            "* **Bento Gonçalves:** Ginásio Municipal de Esportes Ivo Sgarioni (Rua Ernesto Lunardi, 100)\n",
-            "* **Canoas:** Ginásio Municipal de Esportes Alberto Bins (Rua Quinze de Janeiro, 1201)\n",
-            "* **Gravataí:** Ginásio Municipal de Esportes Aldeião (Rua Adolfo Inácio Barcelos, 100)\n",
-            "* **Novo Hamburgo:** Ginásio Municipal de Esportes Agostinho Cavasotto (Rua Guia Lopes, 4141)\n",
-            "* **Santa Cruz do Sul:** Ginásio Municipal de Esportes Arnão (Rua Marechal Floriano, 1333)\n",
-            "* **São Leopoldo:** Ginásio Municipal de Esportes Celso Morbach (Rua Independência, 240)\n",
-            "\n",
-            "**Observações:**\n",
-            "\n",
-            "* Os endereços podem estar sujeitos a alterações.\n",
-            "* É aconselhável entrar em contato com a Defesa Civil do município ou com o governo estadual para obter informações atualizadas.\n",
-            "* Os abrigos estão recebendo doações de alimentos não perecíveis, água, roupas e itens de higiene pessoal. /n\n",
-            "esperando prompt: fim\n"
+            "esperando prompt :fim\n"
           ]
         }
       ]
