--- a/Projeto_Aula05.ipynb
+++ b/Projeto_Aula05.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXbqz0mGz3vX2QzK6igX5S",
+      "authorship_tag": "ABX9TyMf3f9XtCh58U8CFrYDnKSD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
         "    \"DANGEROUS\": \"BLOCK_NONE\",\n",
         "}\n",
         "\n",
-        "result = genai.\n",
+        "#result = genai.\n",
         "\n",
         "# escolhendo o modelo a ser usado\n",
         "model = genai.GenerativeModel(model_name=\"gemini-1.0-pro\",\n",
@@ -94,9 +94,12 @@
     {
       "cell_type": "code",
       "source": [
+        "### aqui começa a aula 05\n",
+        "## importando as libs\n",
         "import google.generativeai as genai\n",
         "import numpy as np\n",
         "import pandas as pd\n",
+        "##pegando a chave\n",
         "from google.colab import userdata\n",
         "api_key = userdata.get( 'SECRET_KEY')\n",
         "genai.configure(api_key=api_key)\n",
@@ -123,6 +126,7 @@
     {
       "cell_type": "code",
       "source": [
+        "## gerando o embedding\n",
         "title = \"The next generation of AI for developers and Google Workspace\"\n",
         "sample_text = (\"Title: The next generation of AI for developers and Google Workspace\"\n",
         "    \"\\n\"\n",
@@ -132,8 +136,6 @@
         "\n",
         "\n",
         "model = 'models/embedding-001'\n",
-        "#result = genai.embed_content(model=model,\n",
-        " #                               content= [sample_text],\n",
         "\n",
         "result_embedding = genai.embed_content(model=model,\n",
         "                                content=sample_text,\n",
@@ -141,17 +143,18 @@
         "                                title=title)\n",
         "\n",
         "\n",
+        "## para o caso de listas usar o for abaixo\n",
+        "  #for embedding in result[\"embedding\"]:\n",
         "\n",
-        "#for embedding in result[\"embedding\"]:\n",
-        "print(str(result_embedding)[:50], '...TRIMMED')"
+        "##print(str(result_embedding)[:50], '...TRIMMED')"
       ],
       "metadata": {
-        "id": "H_f9oLDrmy1b",
-        "outputId": "2823dc77-2391-458a-c6a2-e610933a44c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "id": "H_f9oLDrmy1b",
+        "outputId": "2823dc77-2391-458a-c6a2-e610933a44c4"
       },
       "execution_count": 13,
       "outputs": [
@@ -167,6 +170,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# criando o conteudo de feed do modelo\n",
+        "\n",
         "DOCUMENT1 = {\n",
         "    \"title\": \"Operating the Climate Control System\",\n",
         "    \"content\": \"Your Googlecar has a climate control system that allows you to adjust the temperature and airflow in the car. To operate the climate control system, use the buttons and knobs located on the center console.  Temperature: The temperature knob controls the temperature inside the car. Turn the knob clockwise to increase the temperature or counterclockwise to decrease the temperature. Airflow: The airflow knob controls the amount of airflow inside the car. Turn the knob clockwise to increase the airflow or counterclockwise to decrease the airflow. Fan speed: The fan speed knob controls the speed of the fan. Turn the knob clockwise to increase the fan speed or counterclockwise to decrease the fan speed. Mode: The mode button allows you to select the desired mode. The available modes are: Auto: The car will automatically adjust the temperature and airflow to maintain a comfortable level. Cool: The car will blow cool air into the car. Heat: The car will blow warm air into the car. Defrost: The car will blow warm air onto the windshield to defrost it.\"}\n",
@@ -188,19 +193,21 @@
     {
       "cell_type": "code",
       "source": [
+        "# montando no formato de tabela (embedding)\n",
         "df = pd.DataFrame(documents)\n",
         "df.columns = [\"Titulo\", \"Conteudo\"]\n",
-        "df"
+        "## para ver o conteudo montado usar o comando abaixo\n",
+        "##df"
       ],
       "metadata": {
-        "id": "BNnE2Q7tuUDn",
-        "outputId": "9dc6b539-8b9d-4e6a-ac4b-8301c199a2a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "id": "BNnE2Q7tuUDn",
+        "outputId": "9c7a3a5d-4fb0-4087-fd49-1da107f7d758"
       },
-      "execution_count": 20,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -218,7 +225,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-140e5c0d-71eb-43df-801f-09543a9be456\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-396a18c5-ac2a-40cc-b28a-9fc4d906f511\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -263,7 +270,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-140e5c0d-71eb-43df-801f-09543a9be456')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-396a18c5-ac2a-40cc-b28a-9fc4d906f511')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -315,12 +322,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-140e5c0d-71eb-43df-801f-09543a9be456 button.colab-df-convert');\n",
+              "        document.querySelector('#df-396a18c5-ac2a-40cc-b28a-9fc4d906f511 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-140e5c0d-71eb-43df-801f-09543a9be456');\n",
+              "        const element = document.querySelector('#df-396a18c5-ac2a-40cc-b28a-9fc4d906f511');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -340,8 +347,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-95148ee3-6d2d-4924-a8cb-8a0836d7bb15\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-95148ee3-6d2d-4924-a8cb-8a0836d7bb15')\"\n",
+              "<div id=\"df-87b95521-76ff-4c64-8b61-afd6d3429301\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-87b95521-76ff-4c64-8b61-afd6d3429301')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -460,14 +467,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-95148ee3-6d2d-4924-a8cb-8a0836d7bb15 button');\n",
+              "        document.querySelector('#df-87b95521-76ff-4c64-8b61-afd6d3429301 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_b822eb58-c86e-438a-ad91-beeeabd28b9f\">\n",
+              "  <div id=\"id_6d9c2538-3b54-4160-8049-535ccd12d067\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -511,7 +518,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_b822eb58-c86e-438a-ad91-beeeabd28b9f button.colab-df-generate');\n",
+              "        document.querySelector('#id_6d9c2538-3b54-4160-8049-535ccd12d067 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -532,13 +539,14 @@
             }
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 41
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "## criando a função para montar embedding\n",
         "def embed_fn(title,text):\n",
         "  model = 'models/embedding-001'\n",
         "  result_embedding = genai.embed_content(model=model,\n",
@@ -556,16 +564,18 @@
     {
       "cell_type": "code",
       "source": [
+        "## adicionando o conteudo  de embedding na tabela\n",
         "df[\"Embeddings\"] = df.apply(lambda row: embed_fn(row[\"Titulo\"],row[\"Conteudo\"]),axis=1)\n",
-        "df"
+        "## para ver o conteudo montado usar o comando abaixo\n",
+        "##df"
       ],
       "metadata": {
-        "id": "q66ZFKYlyK3R",
-        "outputId": "eeeffdd8-49a0-44af-f914-923f64521ec2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "id": "q66ZFKYlyK3R",
+        "outputId": "eeeffdd8-49a0-44af-f914-923f64521ec2"
       },
       "execution_count": 27,
       "outputs": [
@@ -915,6 +925,7 @@
     {
       "cell_type": "code",
       "source": [
+        "## função para buscar o conteudo  de uma consulta no tabela embedding\n",
         "def gerar_buscar_consulta (consulta,base,model):\n",
         "  embedding_da_consulta = genai.embed_content(model=model,\n",
         "                                content=consulta,\n",
@@ -934,17 +945,18 @@
     {
       "cell_type": "code",
       "source": [
+        "## fazer a consulta\n",
         "consulta = \"how to change Google car gear?\"\n",
         "trecho = gerar_buscar_consulta(consulta,df,model)\n",
         "print(trecho)"
       ],
       "metadata": {
-        "id": "w8swPsqE4-ud",
-        "outputId": "48ef5deb-b4a9-4875-93bc-caca194865a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        }
+        },
+        "id": "w8swPsqE4-ud",
+        "outputId": "48ef5deb-b4a9-4875-93bc-caca194865a4"
       },
       "execution_count": 35,
       "outputs": [
@@ -960,6 +972,7 @@
     {
       "cell_type": "code",
       "source": [
+        "## mesclar com o generative content e dar uma resposta mais humizada\n",
         "prompt = f\"traduzir para portugues: {trecho} e Reescreva esse conteudo de uma forma mais descontraida, sem adicionar informações que façam parte do texto\"\n",
         "model_2 = genai.GenerativeModel(\"gemini-1.0-pro\")\n",
         "response = model_2.generate_content (prompt)\n",
@@ -967,12 +980,12 @@
         ""
       ],
       "metadata": {
-        "id": "igGLmjsE66xD",
-        "outputId": "5793c352-27e3-4f20-9f0f-02775a5a47a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
-        }
+        },
+        "id": "igGLmjsE66xD",
+        "outputId": "5793c352-27e3-4f20-9f0f-02775a5a47a9"
       },
       "execution_count": 40,
       "outputs": [
